The banner added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>My portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|ZCOOL+XiaoWei&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Montserrat&display=swap" rel="stylesheet"> 
 </head>
+
 <body>
   <!-- Header -->
   <nav class="header">
@@ -14,18 +15,33 @@
           <li><a href="#">Skills</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Contact me</a></li>
-
       </ul>
   </nav>
   <!-- Banner -->
   <div class="banner">
-      <h1>Hello </h1>
+      <h1>Hello!</h1>
+      <h2>Welcome to my website</h2>
   </div>
+  <!-- Content -->
+    <div class="about-me">
 
-    <div class="container">
+    </div>
+    <div class="skills">
 
+    </div>
+    <div class="projects">
+
+    </div>
+    <div class="contact-me">
 
     </div>
 
-
+  <!-- Footer - Form -->
+  <footer>
+    <div class="image-container">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-6/project-morocco/author.png">
+    </div>
+  </footer>
 </body>
+</html>
+
