Sections about me, skills, projects and contact me added. Transitions added. Animations added.

--- a/index.html
+++ b/index.html
@@ -8,40 +8,72 @@
 </head>
 
 <body>
-  <!-- Header -->
-  <nav class="header">
+  <div class="container">
+    <!-- Header -->
+    <nav class="box header">
       <ul>
-          <li><a href="#">About me</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact me</a></li>
+          <li><a href="#about-me">About me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact-me">Contact me</a></li>
       </ul>
-  </nav>
-  <!-- Banner -->
-  <div class="banner">
+    </nav>
+    <!-- Banner -->
+    <div class="box banner">
       <h1>Hello!</h1>
       <h2>Welcome to my website</h2>
+    </div>
+    <!-- Content -->
+    <div class="box section about-me">
+      <div id="about-me">
+        <p>About me</p>
+        <img src = "foto/woman.jpg" title = "Website's author">
+          <div class="about-me-info">
+            <ul>
+              <li>Name and surname: Joanna Luby</li>
+              <li>Professional profile: frontend developer</li>
+              <li>Telephone number: 659 845 123</li>
+              <li>E-mail address: profile@eom.com</li>
+           </ul>
+          </div>
+          <div class="text">
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+          </div>
+      </div>
+    </div>
+    <div class="box skills">
+      <div id="skills">
+        <p>Skills</p>
+      </div>
+    </div>
+    <div class="box section projects">
+      <div id="projects">
+        <p>Projects</p>
+          <div class="container">
+            <div class="photo photo1">
+              <a href="https://www.fishingthefeed.com/" target="-blank" title="Fishing the Feed">
+                <img src="foto/site1.jpg">
+              </a>
+            </div>
+            <div class="photo photo2">
+              <a href="https://thefwa.com/cases/loccitane-seeds-of-dreams" target="-blank" title="Seeds of Dreams">
+                <img src="foto/site2.jpg">
+              </a>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="box contact-me">
+      <div id="contact-me">
+        <p>Contact me</p>
+      </div>
+    </div>
+    <!-- Footer - Form -->
+    <footer>
+      <div class="section">
+      </div>
+    </footer>
   </div>
-  <!-- Content -->
-    <div class="about-me">
-
-    </div>
-    <div class="skills">
-
-    </div>
-    <div class="projects">
-
-    </div>
-    <div class="contact-me">
-
-    </div>
-
-  <!-- Footer - Form -->
-  <footer>
-    <div class="image-container">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-6/project-morocco/author.png">
-    </div>
-  </footer>
 </body>
 </html>
 
